Fix menu background on smaller screens

--- a/www/_sass/minima/custom.scss
+++ b/www/_sass/minima/custom.scss
@@ -61,6 +61,7 @@ a[href="#lek"] img {
         padding: 0.5rem 1rem;
         background: #fdfdfd;
         border-bottom: 1px solid #e8e8e8;
+        z-index: 100;
 
         &:hover {
             background: darkorange;
